--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/swagger": "^7.1.15",
     "@nestjs/typeorm": "^10.0.0",
     "class-validator": "^0.14.0",
+    "faker": "^5.5.3",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
